# licenx-examples

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: licenx-deploy.yml  licenx-release.yml
cli_features/: main.cpp
common/: feature_catalog.h
gui_gpu/: main.cpp
products/: cli_extended.json  cli_full.json  cli_none.json  cli_partial.json  gpu_denied.json  gpu_extended.json  gpu_full.json  gpu_render_only.json
